[package]
name = "relay-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.0"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
tokio = { version="1", features=["full"] }
tokio-util = { version = "0.7.3", features=["codec"] }
